# covmatic-covidseq

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
ot_protocol/: LICENSE  README.md  pyproject.toml
ot_protocol/covmatic_covidseq/: __init__.py  robot.py  robot_api.py
ot_protocol/covmatic_covidseq/robot/: robot.py  robot_api.py
ot_protocol/covmatic_covidseq/stations/: base_station.py  reagent_station.py
ot_protocol/test/: test_robot.py
protocols/: station_library.py  station_library_calibration.py  station_library_manual.py  station_library_noHSTC.py  station_library_noHSTC_calibration.py  station_library_testcovid.py  station_library_testrobot.py  station_reagent.py  station_reagent_calibration.py  station_reagent_configfile.py  station_reagent_start_at.py
src/covmatic_covidseq/: pipette_chooser.py  reagent_helper.py  recipe.py  recipes.json  station.py  transfer_manager.py  utils.py  vertical_mapper.py
src/covmatic_covidseq/labware/: customvertical_96_bottom_aligned.json  customvertical_96_bottom_right_aligned.json  customvertical_96_top_right_aligned.json
src/covmatic_covidseq/stations/: library.py  library_flow_rates.json  library_thermal_cycles.json  reagent.py  reagent_flow_rates.json  reagent_station.py  reagents.json  reagents_chilled_tubes.json
src/covmatic_covidseq/stations/msg/: ReagentStation.json
stations-covidseq/labware/: customvertical_96_top_aligned.json
test/: common.py  test_parse_log.py  test_pipette_chooser.py  test_placeholder.py  test_reagent_plate_helper.py  test_reagentplate.py  test_recipe.py  test_station.py  test_station_get_samples.py  test_station_library.py  test_station_reagent.py  test_vertical_mapper.py
test/assets/: example_config_file.json  example_otapp_v6.3_log.json  example_otapp_v6_log.json
utils/custom_labware_generator/: README.md  custom_labware_generator.py  customvertical_96_wellplate_100ul.json
