[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covmatic-covidseq"
description = 'Covmatic package that implements the Illumina CovidSeq NGS library preparation'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name="Agostino Facotti", email="agostino.facotti@asst-bergamoest.it"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  "covmatic-robotstation"
]

[project.urls]
Documentation = "https://github.com/ASST-Bergamo-Est/covmatic-covidseq"
Issues = "https://github.com/ASST-Bergamo-Est/covmatic-covidseq/issues"
Source = "https://github.com/ASST-Bergamo-Est/covmatic-covidseq"

[tool.hatch.version]
path = "src/covmatic_covidseq/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src.covmatic_covidseq --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38"]

[tool.hatch.envs.simulate.scripts]
install = "pip install ."
run = "opentrons_simulate {matrix:protocols} {args}"

[[tool.hatch.envs.simulate.matrix]]
protocols = ["protocols/station_reagent.py"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src.covmatic_covidseq/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build]
exclude = [
  "/.github",
  "/.idea",
]
