[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covmatic-covidseq"
description = 'Covmatic package that implements the Illumina CovidSeq NGS library preparation'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name="Agostino Facotti", email="agostino.facotti@asst-bergamoest.it"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
  "covmatic-robotstation"
]

[project.urls]
Documentation = "https://github.com/ASST-Bergamo-Est/covmatic-covidseq"
Issues = "https://github.com/ASST-Bergamo-Est/covmatic-covidseq/issues"
Source = "https://github.com/ASST-Bergamo-Est/covmatic-covidseq"

[tool.hatch.version]
path = "src/covmatic_covidseq/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src.covmatic_covidseq {args}"
no-cov = "cov --no-cov {args}"

[tool.hatch.envs.simulate.scripts]
upgrade_stations = "pip install covmatic-stations --upgrade"
install = "pip install ."
install_package = "pip install {args} --force-reinstall --no-deps"
run_reagent = "opentrons_simulate protocols/station_reagent.py {args}"
run_library = "opentrons_simulate protocols/station_library.py {args}"
run_library_manual = "opentrons_simulate protocols/station_library_manual.py {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38"]

[tool.hatch.envs.simulate_all]
template = "simulate"

[tool.hatch.envs.simulate_all.scripts]
run = "opentrons_simulate {matrix:protocols} {args}"

[[tool.hatch.envs.simulate_all.matrix]]
protocols = [
  "protocols/station_reagent.py",
  "protocols/station_reagent_start_at.py",
  "protocols/station_reagent_configfile.py",
  "protocols/station_library.py",
  "protocols/station_library_manual.py"
]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src.covmatic_covidseq/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build]
exclude = [
  "/.github",
  "/.idea",
]

[project.scripts]
covmatic-covidseq-genoffset = "covmatic_covidseq.utils:parse_v6_log_and_create_labware_offsets_json"
