[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covmatic-covidseq"
version = "0.0.1"
authors = [
    { name="Agostino Facotti", email="agostino.facotti@asst-bergamoest.it"},
]
description = "Implementation on Opentrons OT2 of the Illumina CovidSeq protocol"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project-urls]
"Homepage" = "https://github.com/ASST-Bergamo-Est/CovidSeq"